--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Competition</title>
 
     <!-- ADD BOOTSTRAP CORE HERE!!!! -->
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
+
+
   </head>
 
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,13 +30,16 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Main<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Another Link</a>
+            <a class="nav-link" href="https://www.youtube.com/watch?v=pAYer9ZH0PY">Orca-stra</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://savethewhales.org/">Save the whales</a>
           </li>
         </ul>
       </div>
@@ -39,27 +47,84 @@
 
     <main role="main" class="container">
 
+<br>
+
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Whale whale whale</h1>
+        <p class="lead">What do we have here?</p>
       </div>
 
       <!-- columns -->
       <div class="row">
         <div class="col-sm">
-          <!-- add an image here -->
-          One of three columns
+          <img src="./images\image_5896e-Beluga-Whales.jpg" width="400" height="400" alt="Beluga">
         </div>
         <div class="col-sm">
-          <!-- add an image here -->
-          One of three columns
-        </div>
-        <div class="col-sm">
-          <!-- add an image here -->
-          One of three columns
-        </div>
+            <!-- add an image here -->
+            <p><b>Beluga whale</b></p>
+            The species presents a moderate degree of sexual dimorphism, as the males are 25% longer than the females and are sturdier.[23] Adult male belugas can range from 3.5 to 5.5 m (11 to 18 ft), while the females measure 3 to 4.1 m (9.8 to 13.5 ft).
+          </div>
       </div>
-      
+  </div>
+  <br>
+
+      <div class="row">
+        <div class="col-sm">
+          <!-- add an image here -->
+          <p><b>Narwhal</b></p>
+          The total body size can range from 3.95 to 5.5 m (13 to 18 ft)
+        </div>
+        <div class="col-sm">
+            <!-- add an image here -->
+          <img src="./images\Medium_WW248926.jpg" width="400" height="400" alt="Narwhal">
+          </div>
+      </div>
+  </div>
+  <br>
+
+      <div class="row">
+        <div class="col-sm">
+          <!-- add an image here -->
+          <img src="./images\Minke_Whale_(NOAA).jpg" width="400" height="400" alt="Minke">
+        </div>
+        <div class="col-sm">
+            <!-- add an image here -->
+            <p><b>Minke whale</b></p>
+            9.4–10.05 m (30.8–33.0 ft) in length
+          </div>
+      </div>
+  </div>
+  <br>
+
+      <div class="row">
+        <div class="col-sm">
+          <!-- add an image here -->
+          <p><b>Humpback whale</b></p>
+        Fully grown males average 13–14 m (43–46 ft). Females are slightly larger at 15–16 m (49–52 ft);
+        </div>
+        <div class="col-sm">
+            <!-- add an image here -->
+            <img src="./images\Huumpback-Whale.jpg" width="400" height="400" alt="Humpback">
+          </div>
+      </div>
+  </div>
+  <br>
+
+      <div class="row">
+        <div class="col-sm">
+          <!-- add an image here -->
+          <img src="./images\13412.jpg" width="400" height="400" alt="Blue Whale">
+        </div>
+        <div class="col-sm">
+            <!-- add an image here -->
+            <p><b>Blue Whale</b></p>
+          Females are generally a few feet longer than males.Verified measurements rarely exceed 28 meters (92 ft). The longest measured by Macintosh and Wheeler (1929) was a female 28.50 meters (93.5 ft), while the largest male was 26.45 meters (86.8 ft)
+          </div>
+      </div>
+  </div>
+
+
+
       <!-- Add another row here -->
     </main><!-- /.container -->
 
