--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
             <a class="nav-link" href="#">Main<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="./about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Orca-stra</a>
+            <a class="nav-link" href="https://www.youtube.com/watch?v=pAYer9ZH0PY">Orca-stra</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Save the whales</a>
+            <a class="nav-link" href="https://savethewhales.org/">Save the whales</a>
           </li>
         </ul>
       </div>
